# zid

./: Cargo.toml  README.md
.cursor/: rules.md
src/: did.rs  encapsulation.rs  error.rs  lib.rs  neural_key.rs  shamir.rs  shares_api.rs  types.rs
src/keys/: identity.rs  machine.rs  mod.rs  neural.rs
src/ops/: derivation.rs  encapsulation.rs  mod.rs  signing.rs
src/sharing/: mod.rs  shamir.rs  shares_api.rs
tests/: integration.rs
