[package]
name = "zid"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "PQ-Hybrid key generation, HKDF derivation, Ed25519 + ML-DSA-65 signing, ML-KEM-768 encapsulation (zero-id compatible)"
license = "MIT OR Apache-2.0"
keywords = ["cryptography", "post-quantum", "hybrid", "identity", "did"]
categories = ["cryptography", "authentication"]

[lib]
name = "zid"

[features]
default = ["serde", "did", "shamir"]
serde = ["dep:serde", "dep:serde_bytes"]
did = ["dep:bs58"]
shamir = ["dep:shamir-vault", "dep:hex"]
testkit = []

[dependencies]
ed25519-dalek = { version = "2", features = ["hazmat", "zeroize"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
ml-dsa = { version = "0.0.4", features = ["zeroize"] }
ml-kem = { version = "0.2", features = ["deterministic"] }
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
bitflags = "2"
thiserror = "2"

# Optional deps gated by features
bs58 = { version = "0.5", optional = true }
hex = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_bytes = { version = "0.11", optional = true }
shamir-vault = { version = "1.3", optional = true }

[dev-dependencies]
zid = { path = ".", features = ["testkit"] }
